placeholder,img,h2 fixed; overflow added

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ body{
 	outline: 0;
 }
 .search_input{
-	color: #c3c3c3;
 	width: 90%;
 	height: 90px;
 	font-size: 70px;
@@ -42,32 +41,39 @@ body{
 	border: none;
 	outline: 0;
 }
+input::-webkit-input-placeholder { 
+	color: #c3c3c3;
+	
+}
 
 button{
-	width: 10%;
+	width: 6%;
+	height: 60px;
 	color: #c3c3c3;
 	background-color: transparent;
 	border: none;
 	outline: 0;
-	
+	cursor: pointer;
+	background: url(../img/magnifier.svg);
 }
-.magnifier{
-	height: 60px;
+button:hover,
+button:active,
+button:focus {
+	width: 7%;
+	height: 65px;
+}
+
+
+.panels{
+	width: 100%;
 }
 .panel{
-	width: 100%;
-	height: 300px;
-}
-.panel_people,
-.panel_popular,
-.panel_recent{
 	display: inline-block;
 	width: 30%;
 	font-size: 12px;
 
 }
-.panel_people,
-.panel_popular{
+.panel:not(:last-child){
 	margin-right: 4%;
 }
 
@@ -86,18 +92,22 @@ a{
 	font-weight: 600;
 	width: 100%;
 	height: 5em;
-	line-height: 5em;
-	vertical-align: middle;
+	line-height: 1em;
 	display: inline-block;
 	background-color: rgba(118,117,128,0.05);
 	border-radius: 5px;
+	display: flex;
+    align-items: center;
+    padding-right: 6px;
 
 }
 
-.section_name{
+
+
+h2{
 	text-transform: uppercase;
 	color: #c3c3c3;
-	font-weight: 600;
+	font-weight: 800;
 	font-size: 14px;
 	margin-bottom: 20px;
 }
